Adding wip session

--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,11 @@ li {
 .icon {
   text-decoration: none;
 }
+
+.image {
+  max-height: 300px;
+}
+
 @keyframes blinker {
   50% {
     opacity: 0;
