--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ input {
   background-color: #01487e;
   font-family: "Director";
   font-size: 1rem;
+  text-transform: capitalize;
   cursor: pointer;
   padding: 8px;
 }
